--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.3",
+    "lucide": "^0.488.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.2.6"
   },
